--- a/src/app/pages/metronome/metronome.page.html
+++ b/src/app/pages/metronome/metronome.page.html
@@ -1,7 +1,7 @@
 <ion-content>
   <action-buttons [buttons]="buttons"></action-buttons>
 
-  <ion-grid fixed>
+  <ion-grid>
     <ion-row>
       <ion-col size="4" class="center">
         <ion-fab-button [ngClass]="'action-button ' + metronome.train.class" (click)="toggleTrain()">
