--- a/src/app/pages/chordmaker/main/chordmaker.page.scss
+++ b/src/app/pages/chordmaker/main/chordmaker.page.scss
@@ -21,7 +21,9 @@
 }
 
 .chord {
-    margin: 0;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 0;
 
     font-size: larger;
     font-weight: 600;
