--- a/src/app/pages/notefinder/main/notefinder.page.html
+++ b/src/app/pages/notefinder/main/notefinder.page.html
@@ -3,7 +3,7 @@
 
   <ion-grid>
     <ion-row>
-      <ion-col size="12" class="title">Notes</ion-col>
+      <ion-col size="12" class="title">Tonic</ion-col>
     </ion-row>
     <ion-row>
       <ion-col size="12">
@@ -22,7 +22,7 @@
 
   <ion-grid>
     <ion-row>
-      <ion-col size="12" class="title">Notes</ion-col>
+      <ion-col size="12" class="title">Quality</ion-col>
     </ion-row>
     <ion-row>
       <ion-col size="6" *ngFor="let quality of qualities">
@@ -37,7 +37,7 @@
 
   <ion-grid>
     <ion-row>
-      <ion-col size="12" class="title">Notes</ion-col>
+      <ion-col size="12" class="title">Grade</ion-col>
     </ion-row>
     <ion-row>
       <ion-col size="12/5" *ngFor="let num of numbers">
