--- a/src/app/pages/tabs.page.html
+++ b/src/app/pages/tabs.page.html
@@ -2,7 +2,9 @@
 
   <ion-tab-bar slot="bottom">
 
-    <ion-tab-button *ngFor="let tabPage of tabPages" [tab]="tabPage.tab">
+
+    <ion-tab-button *ngFor="let tabPage of tabPages" [tab]="tabPage.tab"
+      style="--color-selected: var(--ion-color-ruby);">
       <ion-icon [name]="tabPage.icon" size="small"></ion-icon>
       <ion-label> {{ tabPage.title }}</ion-label>
     </ion-tab-button>
