--- a/src/app/components/explain-buttons/explain-buttons.component.html
+++ b/src/app/components/explain-buttons/explain-buttons.component.html
@@ -10,7 +10,7 @@
         <ng-container *ngIf="button.name != 'info'">
           <ion-col size="4" class="center">
 
-            <ion-fab-button class="action-button tile-ruby">
+            <ion-fab-button class="action-button tile-ruby" color="ruby">
               <ion-icon [name]="button.icon"></ion-icon>
             </ion-fab-button>
           </ion-col>
